# saufautomat-client

./: Cargo.toml
src/: main.rs  parse.rs  serial.rs  server.rs
src/server/: templates.rs
templates/: index.html  nbevs.html
