[package]
name = "saufautomat-client"
version = "0.1.0"
authors = ["Stephan Goeppentin <dedda102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
rouille = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "3.3"
yatl = "0.1"